# dro-npe

./: .gitignore  README.md  demonstration.ipynb  pyproject.toml
dro_sbi.egg-info/: PKG-INFO  SOURCES.txt
experiments/: train.py  train_and_optimise_hyperparams.py  train_and_optimise_hyperparams_baselines.py
results/ik/: test_sim.pkl
results/lv/: test_sim.pkl
results/slcp/: test_sim.pkl
results/tm/: test_sim.pkl
src/: __init__.py
src/approximator/: continuous_approximator_balanced.py  continuous_approximator_cal.py  continuous_approximator_dro_ub.py
src/diagnostics/: coverage.py  kl_based_calibration.py
src/dro_sbi.egg-info/: SOURCES.txt  requires.txt  top_level.txt
src/utils/: balnpe_helper.py  calnpe_helper.py  load_dro.py
